FIX: Added z-index to metabox reload button because it was not clickable in Gutenberg Block Editor.

--- a/assets/css/scss/metabox-pinned-tasks.scss
+++ b/assets/css/scss/metabox-pinned-tasks.scss
@@ -72,6 +72,8 @@
   padding: 0 1.2em;
   font-weight: 400;
   cursor: pointer;
+  position: relative;
+  z-index: 1;
 }
 
 #ptc-completionist_pinned-tasks button#reload-task-list i {
